src/objects/Personnel_Transition_Form__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Transition__c</fullName>
        <description>Date Transition happens - Needs to be 48+ hours in advance</description>
        <inlineHelpText>Date Transition happens - Needs to be 48+ hours in advance</inlineHelpText>
        <label>Date of Transition</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Personnel_Transition_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Position__c</fullName>
        <label>New Position</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_and_Comments__c</fullName>
        <label>Notes and Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Territory_Change__c</fullName>
        <label>Territory Change (If Applicable)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Personnel Transition Form</label>
    <nameField>
        <label>Personnel Transition Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personnel Transition Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>